--- a/todo
+++ b/todo
@@ -9,3 +9,4 @@ hibernate kernel param
 colored statusbar in qutebrowser for profiles
 disable touchpad keyboard binding
 arch updates py3status
+github py3status
